--- a/app/src/main/res/drawable/rounddistance.xml
+++ b/app/src/main/res/drawable/rounddistance.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#aa0099cc"/>
+    <solid android:color="@color/colorIr" />
     <corners
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
